oblig2patch/src/tests/oblig2/errors/general3_fail.cmp
program general3_fail
begin
  proc main()
    begin
      var foo : int
      in
      bar := 42 /* error, bar not declared */
  end
end